<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" 
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 
                             http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>org.jboss.tools.ssp</groupId>
  <artifactId>parent</artifactId>
  <version>0.0.9-SNAPSHOT</version>
  <packaging>pom</packaging>
  <name>Simple Server Protocol</name>
 
  <properties>
  	<mockito-core.version>2.18.3</mockito-core.version>
  	<assertj-core.version>3.10.0</assertj-core.version>
  </properties>
  
  <modules>
	  <module>api</module>
	  <module>schema</module>
	  <module>client-cli</module>
	  <module>launching</module>
	  <module>launching-java</module>
	  <module>server-spi</module>
	  <module>server</module>
	  <module>server-wildfly</module>
	  <module>distribution</module>
  </modules>

  <build>
    <pluginManagement>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <source>1.8</source>
          <target>1.8</target>
        </configuration>
      </plugin>
    </plugins>
    </pluginManagement>
  </build>

  <dependencies>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.12</version>
      <scope>test</scope>
    </dependency>
	<dependency>
	    <groupId>org.mockito</groupId>
	    <artifactId>mockito-core</artifactId>
	    <version>${mockito-core.version}</version>
	    <scope>test</scope>
	</dependency>
	<dependency>
	    <groupId>org.assertj</groupId>
	    <artifactId>assertj-core</artifactId>
	    <version>${assertj-core.version}</version>
	    <scope>test</scope>
	</dependency>
  </dependencies>
</project>
